# tinyiothub-marketplace

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
api/: Cargo.toml  Dockerfile  rustfmt.toml
api/src/: main.rs
api/src/api/: health.rs  mod.rs
api/src/api/v1/: drivers.rs  mod.rs  templates.rs  webhook.rs
api/src/domain/: driver.rs  mod.rs  template.rs
api/src/dto/: request.rs  response.rs
api/src/infrastructure/: cache.rs  github.rs  mod.rs
api/src/sync/: handler.rs  mod.rs
config/: repositories.json
data/templates/: air_quality_sensor.json  conductivity_sensor.json  electric_meter.json  flow_meter.json  flow_switch.json  gas_sensor.json  hmi_panel.json  humidity_sensor.json  io_module.json  level_sensor.json  light_sensor.json  ph_sensor.json  plc_controller.json  pressure_sensor.json  smoke_detector.json  temperature_sensor.json  thermostat_controller.json  vfd_inverter.json  water_meter.json  wind_sensor.json
docs/: Dockerfile  api.md
docs/superpowers/specs/: 2026-03-28-marketplace-service-design.md
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/components/: category-filter.ts  download-button.ts  driver-card.ts  driver-list.ts  marketplace-app.ts  marketplace-header.ts  protocol-filter.ts  search-box.ts  sort-dropdown.ts  template-card.ts  template-list.ts
web/src/styles/: global.css
