[package]
name = "tinyiothub-marketplace-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
